test/type-error-5.err.expect
test/type-error-5.ktn:5:1: error: cannot solve scalar type constraint [t1 (from myAddVector)] (output of myAddVector) = int (from bar)
test/type-error-5.ktn:3:17: note: [t1 (from myAddVector)] (output of myAddVector) is from here
test/type-error-5.ktn:5:9: note: int (from bar) is from here
